# tooka

./: .gitignore  AUTHORS  CONTRIBUTORS  README.md  TODO.md  Tookafile.py  go.mod  go.sum  main.go  pyproject.toml  renovate.json
.github/workflows/: lint.yml  lint_test.yaml  release.yml  test.yml
assets/: style.md
cmd/: add.go  edit.go  info.go  list.go  module.go  module_info.go  module_list.go  remove.go  root.go  run.go  status.go  toggle.go
internal/app/: adding.go  input_navigation.go  model.go  style.go  update.go  view.go
internal/core/: constants.go  logger.go  manager.go  scheduler.go  storage.go  task.go  task_manager.go
internal/modules/: cronjob.go  database.go  file.go  http.go  module.go  shell.go  sql.go
internal/shared/: constants.go  logger.go
internal/storage/: json.go
internal/task/: task.go
internal/ui/: default_view.go  interactive_input.go  model.go  render.go  style.go  styles.go  task_update.go  task_view.go  ui.go  update.go  view.go
internal/utils/: json_validate.go
modules/: base.py  file.py  shell.py
plugins/: example_plugin.py
tasks/: example_task.json
tests/: add_test.go  cli_test.go  edit_test.go  info_test.go  list_test.go  module_combined_test.go  module_http_test.go  module_shell_test.go  module_sql_test.go  remove_test.go  run_test.go  setup.go  test_cli.py  toggle_test.go  version_test.go
tooka/: _const.py  _utils.py  cli.py  core.py  plugins.py  scheduler.py
tooka/core/: module_loader.py  scheduler.py  task.py  task_manager.py
tooka/task/: task.py  task_list.py
