[tool.poetry]
name = "tooka"
version = "0.1.0"
description = "Your automation sidekick"
authors = ["Benjamin Demetz <demetzbenjamin23@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/Benji377/tooka"  # Replace with actual
repository = "https://github.com/Benji377/tooka"  # GitHub repo
documentation = "https://github.com/Benji377/tooka/wiki"  # Optional
keywords = ["automation", "scheduler", "task runner", "cli", "python"]
classifiers = [ # https://pypi.org/classifiers/
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Utilities",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[tool.poetry.scripts]
tooka = "tooka.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.15.0"
rich = "^14.0.0"
apscheduler = "^3.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.MASTER]
ignore-paths = ["tests"]
max-line-length = 120
disable= "R0903"